--- a/intex.html
+++ b/intex.html
@@ -16,23 +16,53 @@
 <body>
 
     <div class="wrapper">
-
-
         <div class="nav-container">
-            <p class="text-3">
-                Organick
-            </p>
-            <div class="link">
-                <a href="#header-container"> Home</a>
-                <a href="#slogan-container"> About us</a>
-                <a href="#shop-containe"> Shop</a>
-                <a href="#shop-containe"> Shop</a>
-                <a href="#page-container"> Page</a>
-                <a href="#footer-container"> Contact Us</a>
+            <div class="icon-nav">
+                <img src="./icon/Vector-2.png" alt="" width="32" height="32">
+                <p class="text-3">
+                    Organick
+                </p>
             </div>
-            <button class="card">
-                Card
-            </button>
+
+            <div class="link">
+                <a href="#header-container">
+                    <p class="text-6">
+                        Home
+                    </p>
+                </a>
+                <a href="#slogan-container">
+                    <p class="text-6">
+                        About us
+                    </p>
+                </a>
+                <a href="#shop-container">
+                    <p class="text-6">
+                        Shop
+                    </p>
+                </a>
+                <a href="#page-container">
+                    <p class="text-6">
+                        Page
+                    </p>
+                </a>
+                <a href="#footer-container">
+                    <p class="text-6">
+                        Contact Us
+                    </p>
+                </a>
+            </div>
+            <form>
+                <select>
+                    <option disabled>select a language</option>
+                    <option>EN</option>
+                    <option>BE</option>
+                    <option>HE</option>
+                    <option>ES</option>
+                    <option>RU</option>
+                    <option>JA</option>
+                </select>
+            </form>
+
         </div>
         <div class="header-container" id="header-container">
             <div class="text-header">
@@ -682,7 +712,11 @@
 
         </div>
         <div class="footer-container" id="footer-container">
+            <hr>
+            <p class="footer">
+                Copyright © Organick | Designed by VictorFlow - Powered by Webflow
 
+            </p>
         </div>
     </div>
 
