--- a/intex.html
+++ b/intex.html
@@ -165,11 +165,9 @@
 
         </div>
         <div class="shop-container" id="shop-container">
-            <div>
+            <div class="shop-container-tx">
                 <p class="text-3">
-                    <em>
-                        Organic
-                    </em>
+                    Organic
                 </p>
                 <p class="text-2">
                     Our Products
