--- a/intex.html
+++ b/intex.html
@@ -381,10 +381,7 @@
                 <div>
 
                     <div class="icon-subtitle">
-                        <div class="icon-slogan">
-                            <img src="./icon/Vector.png" alt="">
-                        </div>
-                        <div>
+                        <div class="wrapper-soup">
                             <p class="text-4">
                                 Organic Foods Only
                             </p>
@@ -395,10 +392,7 @@
                         </div>
                     </div>
                     <div class="icon-subtitle">
-                        <div class="icon-slogan">
-                            <img src="./icon/Vector-1.png" alt="">
-                        </div>
-                        <div>
+                        <div class="wrapper-postbox">
                             <p class="text-4">
                                 Quality Standards
                             </p>
@@ -411,9 +405,9 @@
                     </div>
                 </div>
 
-                <button>
+                <div class="shop-button-slogan">
                     Shop now
-                </button>
+                </div>
 
             </div>
 
