--- a/intex.html
+++ b/intex.html
@@ -25,10 +25,17 @@
             </div>
 
             <div class="link">
-                <a href="#header-container">
+                <a class="drop-down-menu" href="#header-container">
                     <p class="text-6">
                         Home
                     </p>
+                    <ul class="submenu">
+                        <li class="submenu_item">Option 1</li>
+                        <li class="submenu_item">Option 2</li>
+                        <li class="submenu_item">Option 3</li>
+                        <li class="submenu_item">Option 4</li>
+                        <li class="submenu_item">Option 5</li>
+                    </ul>
                 </a>
                 <a href="#slogan-container">
                     <p class="text-6">
@@ -108,9 +115,7 @@
         
         <div class="shop-container" id="shop-container">
             <div class="shop-container-tx">
-                <p class="text-3">
-                    Organic
-                </p>
+                
                 <p class="text-2">
                     Our Products
                 </p>
